--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
 
     <!-- My own stylesheet -->
     <link href="style.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
     <div class="container d-flex align-items-center h-100">
         <div class="row">
             <header class="text-center col-12">
-                <h1 class="text-uppercase"><strong>The Biggest Startup Event Of The Year</strong></h1>
+                <h1 class="text-uppercase animate__animated animate__fadeIn"><strong>The Biggest Startup Event Of The
+                        Year</strong></h1>
             </header>
             <div class="buffer col-12"></div>
             <section class="text-center col-12">
